# QuerySplit

./: .gitignore  CMakeLists.txt  DebugNotes.txt  README.md  compile.sh  count.cpp  extract_from_query_split.py  imdb-job_origin.xlsx  imdb-job_query_split.xlsx  imdb-job_vanilla.xlsx  measure.cpp  measure.sh  nohup.out  tpch_origin.xlsx  tpch_query_split.xlsx
imdb/: imdb_optimal_log.txt  imdb_query_split_log.txt  imdb_query_split_result.txt  imdb_vanilla_log.txt  imdb_vanilla_result.txt
package/: 2022.4.20 result.xlsx  postgresql.conf
package/query/: 32.sql
package/test original PostgreSQL/expr/: log.txt  main.cpp
package/test query split/exper/: main.cpp
package/test_original_PostgreSQL/: original PostgreSQL setting.txt
package/test_original_PostgreSQL/expr/: main.cpp
package/test_query_split/: query split setting.txt
package/test_query_split/exper/: log.txt  main.cpp
results/fk_pk_index/tpch_3/: tpch_3_vanilla_log.txt
results/pk_index/: .~lock.imdb-job_vanilla.xlsx#  imdb-job_query_split.xlsx  imdb-job_vanilla.xlsx  nohup.out
results/pk_index/imdb/: imdb_query_split_log.txt  imdb_vanilla_log.txt  imdb_vanilla_result.txt  nohup.out
